--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Son</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       html,
       body {
@@ -97,49 +98,10 @@
           transform: translate(2px, 2px);
         }
       }
-
-      .content {
-        padding: 60px 20px;
-        max-width: 1200px;
-        margin: auto;
-        position: relative;
-        z-index: 2;
-      }
-
-      a {
-        text-decoration: none;
-        color: #0f0;
-      }
-
-      hr {
-        border: 1px solid #333;
-        width: 80%;
-        margin: 40px auto;
-      }
-
-      h3 {
-        text-align: center;
-        margin-top: 40px;
-      }
-
-      h4 {
-        text-align: center;
-        margin-top: 20px;
-      }
-
-      ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      ul li {
-        margin: 10px 0;
-        font-size: 18px;
-      }
     </style>
   </head>
   <body>
-    <!-- Header with Matrix Rain Background -->
+    <!-- Header -->
     <div class="header-container">
       <div class="rain-background"></div>
       <div class="matrix-container">
@@ -154,110 +116,141 @@
     </div>
 
     <!-- Main Content -->
-    <div class="content">
+    <div class="p-8 max-w-5xl mx-auto space-y-10">
       <!-- Contact -->
-      <p align="center">
+      <div class="flex justify-center flex-wrap gap-4">
         <a
           href="https://www.linkedin.com/in/daniel-son-720950260/"
           target="_blank"
-          rel="noopener noreferrer"
         >
-          <img
-            src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
-            alt="LinkedIn"
-          />
+          <button
+            class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            LinkedIn
+          </button>
         </a>
-        <a
-          href="mailto:djson721@gmail.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white"
-            alt="Gmail"
-          />
+        <a href="mailto:djson721@gmail.com" target="_blank">
+          <button
+            class="text-white bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Gmail
+          </button>
         </a>
-      </p>
+      </div>
 
       <!-- Toolkit -->
-      <hr />
-      <h3>💼 My Toolkit</h3>
+      <hr class="border-gray-700" />
+      <h3 class="text-center text-2xl">💼 My Toolkit</h3>
 
       <!-- Languages -->
-      <h4>🌎 Languages</h4>
-      <p align="center">
-        <img
-          src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/OCaml-EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Assembly-8E0E00?style=for-the-badge&logo=assemblyscript&logoColor=white"
-        />
-      </p>
+      <h4 class="text-center text-xl">🌎 Languages</h4>
+      <div class="flex justify-center flex-wrap gap-4">
+        <button
+          class="bg-gradient-to-r from-yellow-500 to-yellow-700 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Python
+        </button>
+        <button
+          class="bg-gradient-to-r from-orange-500 to-orange-700 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Java
+        </button>
+        <button
+          class="bg-gradient-to-r from-blue-700 to-blue-900 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          C
+        </button>
+        <button
+          class="bg-gradient-to-r from-gray-800 to-black text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Rust
+        </button>
+        <button
+          class="bg-gradient-to-r from-orange-400 to-orange-600 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          OCaml
+        </button>
+        <button
+          class="bg-gradient-to-r from-red-800 to-red-900 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Assembly
+        </button>
+      </div>
 
       <!-- Operating Systems -->
-      <h4>🖥️ Operating Systems</h4>
-      <p align="center">
-        <img
-          src="https://img.shields.io/badge/mac%20os-000000?style=for-the-badge&logo=apple&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black"
-        />
-        <img
-          src="https://img.shields.io/badge/Kali_Linux-557C94?style=for-the-badge&logo=kali-linux&logoColor=white"
-        />
-      </p>
+      <h4 class="text-center text-xl">🖥️ Operating Systems</h4>
+      <div class="flex justify-center flex-wrap gap-4">
+        <button
+          class="bg-gradient-to-r from-gray-900 to-black text-white px-4 py-2 rounded-lg text-sm"
+        >
+          macOS
+        </button>
+        <button
+          class="bg-gradient-to-r from-blue-500 to-blue-700 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Windows
+        </button>
+        <button
+          class="bg-gradient-to-r from-yellow-400 to-yellow-600 text-black px-4 py-2 rounded-lg text-sm"
+        >
+          Linux
+        </button>
+        <button
+          class="bg-gradient-to-r from-blue-300 to-blue-500 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Kali Linux
+        </button>
+      </div>
 
       <!-- Cybersecurity Tools -->
-      <h4>🛡️ Cybersecurity Tools</h4>
-      <p align="center">
-        <img
-          src="https://img.shields.io/badge/Nmap-FF6600?style=for-the-badge&logo=Nmap&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Wireshark-1679A7?style=for-the-badge&logo=wireshark&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Metasploit-EA2C59?style=for-the-badge"
-        />
-        <img
-          src="https://img.shields.io/badge/VMware-607078?style=for-the-badge&logo=vmware&logoColor=white"
-        />
-      </p>
+      <h4 class="text-center text-xl">🛡️ Cybersecurity Tools</h4>
+      <div class="flex justify-center flex-wrap gap-4">
+        <button
+          class="bg-gradient-to-r from-orange-400 to-orange-600 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Nmap
+        </button>
+        <button
+          class="bg-gradient-to-r from-blue-400 to-blue-600 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Wireshark
+        </button>
+        <button
+          class="bg-gradient-to-r from-pink-500 to-pink-700 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Metasploit
+        </button>
+        <button
+          class="bg-gradient-to-r from-gray-600 to-gray-800 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          VMware
+        </button>
+      </div>
 
       <!-- Development Tools -->
-      <h4>🛠️ Development Tools</h4>
-      <p align="center">
-        <img
-          src="https://img.shields.io/badge/VSCode-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white"
-        />
-        <img
-          src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
-        />
-      </p>
+      <h4 class="text-center text-xl">🛠️ Development Tools</h4>
+      <div class="flex justify-center flex-wrap gap-4">
+        <button
+          class="bg-gradient-to-r from-blue-400 to-blue-600 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          VS Code
+        </button>
+        <button
+          class="bg-gradient-to-r from-gray-800 to-black text-white px-4 py-2 rounded-lg text-sm"
+        >
+          GitHub
+        </button>
+        <button
+          class="bg-gradient-to-r from-red-500 to-red-700 text-white px-4 py-2 rounded-lg text-sm"
+        >
+          Git
+        </button>
+      </div>
 
-      <!-- Featured Projects -->
-      <hr />
-      <h3>🚀 Featured Projects</h3>
-      <div align="center">
+      <!-- Projects -->
+      <hr class="border-gray-700" />
+      <h3 class="text-center text-2xl">🚀 Featured Projects</h3>
+      <div class="flex flex-wrap justify-center gap-4">
         <a href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity">
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Why-I-Love-Cybersecurity&theme=tokyonight"
@@ -291,45 +284,43 @@
       </div>
 
       <!-- Certifications -->
-      <hr />
-      <h3>📜 Certifications</h3>
-      <div align="center">
+      <hr class="border-gray-700" />
+      <h3 class="text-center text-2xl">📜 Certifications</h3>
+      <div class="flex justify-center flex-wrap gap-4">
         <a
           href="https://www.credly.com/badges/6bc1b1ee-c569-4b9a-9c18-75e2a44e1c8c/public_url"
           target="_blank"
         >
-          <img
-            src="https://img.shields.io/badge/Google_Cybersecurity-4285F4?style=for-the-badge&logo=google&logoColor=white"
-            alt="Google Cybersecurity Certificate"
-          />
+          <button
+            class="bg-gradient-to-r from-blue-500 to-blue-700 text-white px-4 py-2 rounded-lg text-sm"
+          >
+            Google Cybersecurity
+          </button>
         </a>
         <a
           href="https://www.credly.com/badges/44600edd-a72d-4115-bc9d-9077239cdb00/public_url"
           target="_blank"
         >
-          <img
-            src="https://img.shields.io/badge/CompTIA_Security+-D50000?style=for-the-badge&logo=comptia&logoColor=white"
-            alt="CompTIA Security+"
-          />
+          <button
+            class="bg-gradient-to-r from-red-700 to-red-900 text-white px-4 py-2 rounded-lg text-sm"
+          >
+            CompTIA Security+
+          </button>
         </a>
       </div>
 
-      <!-- GitHub Analytics -->
-      <hr />
-      <h3>📊 GitHub Analytics</h3>
-      <div align="center">
-        <a href="https://github.com/anuraghazra/github-readme-stats">
-          <img
-            height="165"
-            src="https://github-readme-stats.vercel.app/api?username=danielson721&show_icons=true&theme=tokyonight&include_all_commits=true"
-          />
-        </a>
-        <a href="https://github.com/anuraghazra/github-readme-stats">
-          <img
-            height="165"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username=danielson721&layout=compact&theme=tokyonight"
-          />
-        </a>
+      <!-- GitHub Stats -->
+      <hr class="border-gray-700" />
+      <h3 class="text-center text-2xl">📊 GitHub Analytics</h3>
+      <div class="flex justify-center flex-wrap gap-6">
+        <img
+          height="165"
+          src="https://github-readme-stats.vercel.app/api?username=danielson721&show_icons=true&theme=tokyonight&include_all_commits=true"
+        />
+        <img
+          height="165"
+          src="https://github-readme-stats.vercel.app/api/top-langs/?username=danielson721&layout=compact&theme=tokyonight"
+        />
       </div>
     </div>
   </body>
