--- a/main.html
+++ b/main.html
@@ -118,10 +118,14 @@
     <!-- Main Content -->
     <div class="p-8 max-w-5xl mx-auto space-y-10">
       <!-- Contact -->
+      <!-- Socials -->
+      <hr class="border-gray-700" />
+      <h3 class="text-center text-2xl">📡 Socials</h3>
       <div class="flex justify-center flex-wrap gap-4">
         <a
           href="https://www.linkedin.com/in/daniel-son-720950260/"
           target="_blank"
+          rel="noopener noreferrer"
         >
           <button
             class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5"
@@ -129,7 +133,11 @@
             LinkedIn
           </button>
         </a>
-        <a href="mailto:djson721@gmail.com" target="_blank">
+        <a
+          href="mailto:djson721@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <button
             class="text-white bg-gradient-to-r from-red-500 via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5"
           >
@@ -251,32 +259,56 @@
       <hr class="border-gray-700" />
       <h3 class="text-center text-2xl">🚀 Featured Projects</h3>
       <div class="flex flex-wrap justify-center gap-4">
-        <a href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity">
+        <a
+          href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Why-I-Love-Cybersecurity&theme=tokyonight"
           />
         </a>
-        <a href="https://github.com/DanielSon721/OCaml-Interpreter">
+        <a
+          href="https://github.com/DanielSon721/OCaml-Interpreter"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=OCaml-Interpreter&theme=tokyonight"
           />
         </a>
-        <a href="https://github.com/DanielSon721/Auto-Messenger">
+        <a
+          href="https://github.com/DanielSon721/Auto-Messenger"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Auto-Messenger&theme=tokyonight"
           />
         </a>
-        <a href="https://github.com/DanielSon721/Hacking-Tools">
+        <a
+          href="https://github.com/DanielSon721/Hacking-Tools"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Hacking-Tools&theme=tokyonight"
           />
         </a>
-        <a href="https://github.com/DanielSon721/Unix-Shell">
+        <a
+          href="https://github.com/DanielSon721/Unix-Shell"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Unix-Shell&theme=tokyonight"
           />
         </a>
-        <a href="https://github.com/DanielSon721/Texas-Hold-em-Poker">
+        <a
+          href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img
             src="https://github-readme-stats.vercel.app/api/pin/?username=danielson721&repo=Texas-Hold-em-Poker&theme=tokyonight"
           />
@@ -290,6 +322,7 @@
         <a
           href="https://www.credly.com/badges/6bc1b1ee-c569-4b9a-9c18-75e2a44e1c8c/public_url"
           target="_blank"
+          rel="noopener noreferrer"
         >
           <button
             class="bg-gradient-to-r from-blue-500 to-blue-700 text-white px-4 py-2 rounded-lg text-sm"
@@ -300,6 +333,7 @@
         <a
           href="https://www.credly.com/badges/44600edd-a72d-4115-bc9d-9077239cdb00/public_url"
           target="_blank"
+          rel="noopener noreferrer"
         >
           <button
             class="bg-gradient-to-r from-red-700 to-red-900 text-white px-4 py-2 rounded-lg text-sm"
